Add volumes in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   koa-typescript:
     image: koa-typescript
     build: .
+    volumes:
+      - .:/usr/src/app/
     ports:
       - 3000:3000
     command: yarn dev
