--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/server.ts",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint:fix": "tslint -c tslint.json --fix 'src/**/*.ts'",
     "build": "tsc"
   },
   "dependencies": {
@@ -24,6 +26,8 @@
     "@types/mongoose": "^5.7.6",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
+    "tslint": "^6.1.0",
+    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.8.3"
   }
 }
