--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
     "tslint": "^6.1.0",
-    "tslint-config-airbnb": "^5.11.2",
+    "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.8.3"
   }
 }
