--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-typescript-boilerplate",
   "version": "1.0.0",
-  "description": "My KoaJS with TypeScript Tutorial",
+  "description": "My KoaJS with TypeScript Boilerplate",
   "main": "index.js",
   "author": "Runyasak Chaengnaimuang",
   "license": "MIT",
